made changes to login design, font and overflow issue on mobile display

--- a/app/globals.css
+++ b/app/globals.css
@@ -56,6 +56,10 @@
   body {
     @apply bg-background text-foreground;
     padding-top: 5rem;
+    overflow-x: hidden;
+  }
+  html {
+    overflow-x: hidden;
   }
 }
 
